/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package ec.edu.espe.mazegenerator.view;

import ec.edu.espe.mazegenerator.model.Maze;

/**
 *
 * @author Usuario
 */
public class MazeGenerated {
    public void printMazeDetails(String details) {
           System.out.println(details);
    }

    public void printMaze(Maze maze) {
           System.out.println("Maze generated, printing in ASCII/Image generated soon.");
    }
  
}
